# bitarray

./: CMakeLists.txt  LICENSE  README.md
include/: bitarray.hh
src/: Makefile  bitarray.cc  bitarray.hh  bitarray.test.cc  mktest.lisp
test/: bitarray.test.cc  mktest.lisp
