cmake_minimum_required(VERSION 3.10)
project(bitarray VERSION 0.9)

#set(CMAKE_BINARY_DIR build)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set(PROJECT_BINARY_DIR bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)

include_directories(include)
add_library(bitarray SHARED src/bitarray.cc include/bitarray.hh)

if(BUILD_TESTS)
    find_package(Catch2)
    if(Catch2_FOUND)
        add_executable(bitarray.test test/bitarray.test.cc)
        target_link_libraries(bitarray.test PUBLIC bitarray Catch2::Catch2)
        include(CTest)
        include(Catch)
        catch_discover_tests(bitarray.test)
    else()
        message(WARNING "Catch2 not found")
    endif()
endif()
